# learningc

./: CMakeLists.txt  README.md
1.6Arrays/: .counter.c.swp  a.out  counter.c
1.6Arrays/1-13/: a.out  histogram.c
4-1/4-1/: 4-1.cbp  4-1.depend  main.c
copyfile/: a.out  copyfile.c  printEOF.c
hello_world/: a.out  hello_world.c
histogram/: '  a.out  histogram.c
linecounter/: .linecounter.c.swp  a.out  countblanks.c  linecounter.c
power_func/: a.out  power_func.c
str_rev/: a.out  str_rev.c
temp_converter/: a.out  float_temp_converter.c  rev_for_temp_converter.c  temp_converter.c
